# pack

./: .gitignore  Cargo.toml  Packfile.example  README.md
.github/workflows/: deploy-web.yml  publish-pack-rb.yml  release-binaries.yml  release.yml
benchmarks/: compare_pack.py  competitors.sh  pack_vs_ruby.sh
crates/pack-cache/: Cargo.toml
crates/pack-cache/src/: lib.rs
crates/pack-cli/: Cargo.toml
crates/pack-cli/src/: main.rs  rails.rs
crates/pack-core/: Cargo.toml
crates/pack-core/src/: lib.rs
crates/pack-exec/: Cargo.toml
crates/pack-exec/src/: lib.rs  plugins.rs
crates/pack-gemfile/: Cargo.toml
crates/pack-gemfile/benches/: gemfile_parse.rs  lockfile_bench.rs
crates/pack-gemfile/src/: generate.rs  lib.rs  lockfile.rs  pack_lock.rs  packfile.rs
crates/pack-installer/: Cargo.toml
crates/pack-installer/src/: lib.rs
crates/pack-registry/: Cargo.toml
crates/pack-registry/src/: lib.rs  native.rs
crates/pack-resolver/: Cargo.toml
crates/pack-resolver/src/: lib.rs
docs/: astro.config.mjs  index.html  package-lock.json  package.json  script.js  styles.css
docs/_astro/: DocsToc.Bbn-Ep7p.css  index@_@astro.C1WN6lmW.css
docs/docs/: index.html
docs/docs/benchmarks/: index.html
docs/docs/commands/: index.html
docs/docs/getting-started/: index.html
docs/docs/rails/: index.html
docs/scripts/: sync-dist.mjs
docs/src/components/docs/: Callout.astro  DocsSidebar.astro  DocsToc.astro
docs/src/components/landing/: BenchmarksSection.astro  CTASection.astro  FeaturesGrid.astro  Footer.astro  Hero.astro  Navbar.astro  ProblemSection.astro  SolutionSection.astro  UseCasesSection.astro
docs/src/layouts/: DocsLayout.astro  LandingLayout.astro
docs/src/pages/: index.astro
docs/src/pages/docs/: benchmarks.astro  commands.astro  getting-started.astro  index.astro  rails.astro
docs/src/styles/: global.css  tokens.css
fixtures/ruby-projects/groups/: Gemfile
fixtures/ruby-projects/rails-like/: Gemfile
gems/pack-rb/: LICENSE.txt  PUBLISHING.md  README.md  pack-rb-0.1.1.gem  pack-rb.gemspec
gems/pack-rb/exe/: pack
gems/pack-rb/lib/pack/: rb.rb
gems/pack-rb/lib/pack/rb/: launcher.rb  version.rb
scripts/: install.ps1  install.sh
web/: astro.config.mjs  index.html
web/src/components/docs/: DocsSidebar.astro  DocsToc.astro
web/src/components/landing/: BenchmarksSection.astro  CTASection.astro  FeaturesGrid.astro  Footer.astro  Hero.astro  Navbar.astro  ProblemSection.astro  SolutionSection.astro  UseCasesSection.astro
web/src/layouts/: DocsLayout.astro  LandingLayout.astro
web/src/pages/: index.astro
web/src/pages/docs/: benchmarks.astro  commands.astro  getting-started.astro  index.astro  rails.astro
web/src/styles/: global.css  tokens.css
web/src/utils/: base.ts
