[workspace]
resolver = "2"
members = [
  "crates/pack-cli",
  "crates/pack-core",
  "crates/pack-gemfile",
  "crates/pack-registry",
  "crates/pack-resolver",
  "crates/pack-installer",
  "crates/pack-cache",
  "crates/pack-exec",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Blu3Ph4ntom/pack"
homepage = "https://blu3ph4ntom.github.io/pack/"
documentation = "https://blu3ph4ntom.github.io/pack/docs/"
