[package]
name = "pack-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Cache helpers for Pack."
publish = false

[dependencies]
pack-core = { path = "../pack-core" }
directories = "6"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
