[package]
name = "pack-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pack"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
pack-core = { path = "../pack-core" }
pack-gemfile = { path = "../pack-gemfile" }
pack-exec = { path = "../pack-exec" }
pack-registry = { path = "../pack-registry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
