[package]
name = "pack-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core types for Pack."
publish = false

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
