[package]
name = "pack-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Execution helpers and plugin surfaces for Pack."
publish = false

[dependencies]
pack-core = { path = "../pack-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
