[package]
name = "pack-gemfile"
version = "0.1.0"
edition = "2021"

[dependencies]
pack-core = { path = "../pack-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "gemfile_parse"
harness = false

[[bench]]
name = "lockfile_bench"
harness = false
