[package]
name = "pack-gemfile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Gemfile and lockfile parsing for Pack."
publish = false

[dependencies]
pack-core = { path = "../pack-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "gemfile_parse"
harness = false

[[bench]]
name = "lockfile_bench"
harness = false
