[package]
name = "pack-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Gem installation pipeline for Pack."
publish = false

[dependencies]
pack-core = { path = "../pack-core" }
pack-cache = { path = "../pack-cache" }
pack-gemfile = { path = "../pack-gemfile" }
thiserror = "2"
rayon = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
