[package]
name = "pack-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
pack-core = { path = "../pack-core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
