[package]
name = "pack-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Dependency resolution helpers for Pack."
publish = false

[dependencies]
pack-core = { path = "../pack-core" }
thiserror = "2"
